@@ -107,6 +107,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #26041: Remove "will be removed in Python 3.7" from deprecation
+  messages of platform.dist() and platform.linux_distribution().
+  Patch by Kumaripaba Miyurusara Athukorala.
+
 - Issue #26822: itemgetter, attrgetter and methodcaller objects no longer
   silently ignore keyword arguments.
 
